--- a/index.html
+++ b/index.html
@@ -15,22 +15,34 @@
 			</div>
 			<div class="input-items">
 				<div class="input">
-				<label>Informe o valor da venda *</label>
-				<input type="text" name="">
+				<label for="venda">Informe o valor da venda *</label>
+				<input type="number" name="venda"
+				id="venda">
 			</div>
 			<div class="input">
-				<label>Em quantas parcelas *</label>
-				<input type="text" name="">
+				<label for="parcelas">Em quantas parcelas *</label>
+				<input type="number" name="parcelas"
+				id="parcelas">
 				<span>Máximo de 12 parcelas</span>
 			</div>
 			<div class="input">
-				<label>Informe o percentual de MDR *</label>
-				<input type="text" name="">
+				<label for="porcentual">Informe o percentual de MDR *</label>
+				<input type="number" name="porcentual" id="porcentual">
 				</div>
 			</div>
 		</div>
 		<div class="content-output">
-			sadsad
+			<div class="output-title">
+				<h2>Você receberá:</h2>
+				<hr/>
+			</div>
+			<div class="output-result">
+				<span>Amanhã: <strong>R$ 0,00</strong></span>
+				
+				<span>Em 15 dias: <strong>R$ 0,00</strong></span>
+				<span>Em 30 dias: <strong>R$ 0,00</strong></span>
+				<span>Em 90dias: <strong>R$ 0,00</strong></span>
+			</div>
 		</div>
 	</section>
 <script type="text/javascript" src="assets/js/app.js"></script>
