--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 			<div class="input">
 				<label for="parcelas">Em quantas parcelas *</label>
 				<input type="number" name="parcelas"
-				id="parcelas">
+				id="parcelas" max="12">
 				<span>Máximo de 12 parcelas</span>
 			</div>
 			<div class="input">
 				<label for="porcentual">Informe o percentual de MDR *</label>
 				<input type="number" name="porcentual" id="porcentual">
 				</div>
+				
 			</div>
 		</div>
 		<div class="content-output">
@@ -37,11 +38,11 @@
 				<hr/>
 			</div>
 			<div class="output-result">
-				<span>Amanhã: <strong>R$ 0,00</strong></span>
+				<span>Amanhã: <strong id="output-tomorrow">R$ 0,00</strong></span>
 				
-				<span>Em 15 dias: <strong>R$ 0,00</strong></span>
-				<span>Em 30 dias: <strong>R$ 0,00</strong></span>
-				<span>Em 90dias: <strong>R$ 0,00</strong></span>
+				<span>Em 15 dias: <strong id="output-15days">R$ 0,00</strong></span>
+				<span>Em 30 dias: <strong id="output-30days">R$ 0,00</strong></span>
+				<span>Em 90dias: <strong id="output-90days">R$ 0,00</strong></span>
 			</div>
 		</div>
 	</section>
